Release 2.1.1-SNAPSHOT

New Features
  * New platform support (PowerPC 64bit and s390x)

Bug Fixes
  * Fixed NullPointerException when stored proc output parameters return a 
    NULL value.

Release 2.1.0

New Features
  * New build system! Jsqsh now builds with maven
  * Jsqsh JNI libraries are now built into the jar, plus added support for Power 
    Linux 64bit
  * New interactive connection setup wizards! This consists of the following:
     - First time startup of jsqsh will enter the setup wizard
     - The --setup startup option can enter the setup wizard
     - "\setup" command can enter the setup wizard
     - "\connect --setup" enters the connection setup wizard
     - "\drivers --setup" enters the driver setup wizard
  * Each JDBC driver may provide its own class path. This class path can be
    set via the driver setup wizard, and may include environment variables,
    such as "${ORACLE_HOME}/jdbc".
  * Special support for executing stored procedure with output parameters. 
    See "\help storedprocs" for details.
  * Each JDBC driver may now specify identifier normalization rules. For example,
    if an object name like MyTable is normalized to MYTABLE or mytable when 
    stored in the catalogs. This allows the metadata commands like \show and
    \describe to work smarter.
  * Each JDBC driver can optionally specify a query to run to determine the
    current schema for the session.  This allows metadata commands like \show
    and \describe to work smarter.
  * The !N history recall now allows negative values, so "!-2" means
    you want to edit query you executed two queries prior.
  * New variables $dflt_driver, $dflt_username, $dflt_database available
    to provide defaults for connection arguments that are not supplied.
  * Added new -X,--exit-value startup flag to indicate to jsqsh what to use
    for its exit status. The default value is "total" (--exit-value="total")